# rust-experiments

./: .gitignore
basic-otel/: Cargo.toml
basic-otel/src/: main.rs  work.rs
bevy-non-send/: Cargo.toml
bevy-non-send/src/: main.rs
clap-test/: Cargo.toml
clap-test/src/: main.rs
clippy-lint-unwrap/: Cargo.toml
clippy-lint-unwrap/src/: main.rs
divan-n/: Cargo.toml
divan-n/src/: main.rs
env-var-registry/: Cargo.toml
env-var-registry/app/: Cargo.toml
env-var-registry/app/src/: main.rs
env-var-registry/clients/: Cargo.toml
env-var-registry/clients/src/: lib.rs
env-var-registry/env_vars/: Cargo.toml
env-var-registry/env_vars/src/: lib.rs
env-var-registry/src/: lib.rs  main.rs
ipc/: Cargo.toml  README.md  tester.sh
ipc/benches/: examples.rs
ipc/src/: iceoryx.rs  lib.rs  main.rs  pipes.rs  shmem.rs  tcp.rs  udp.rs
literal-matches/: Cargo.toml
literal-matches/b/: Cargo.toml
literal-matches/b/src/: main.rs
literal-matches/examples/: a.rs
literal-matches/src/: lib.rs
mat-mult/: Cargo.toml  pyproject.toml
mat-mult/src/: lib.rs
rust-116536/example/src/: main.rs
rust-97006/: commands.sh
rust-97006/bug2/: Cargo.toml
rust-97006/bug2/src/: main.rs
rust-97006/hir-bug/: Cargo.toml
rust-97006/hir-bug/expanded/: Cargo.toml
rust-97006/hir-bug/expanded/src/: main.rs
rust-97006/hir-bug/src/: main.rs
rust-97006/working-bug/: Cargo.toml
rust-97006/working-bug/src/: main.rs
shell-func-detection/: Cargo.toml
shell-func-detection/src/: main.rs
spin/: Cargo.toml
till-help/: Cargo.toml  c  test.txt
till-help/src/: main.rs
wh/: Cargo.toml
wh/src/: main.rs
