[package]
name = "basic-otel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.20.0", features = ["metrics"] }
opentelemetry-stdout = { version = "0.1.0", features = ["metrics", "trace"] }
opentelemetry_api = { version = "0.20.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.20.0", features = ["rt-tokio", "rt-tokio-current-thread"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
