[package]
name = "clippy-lint-unwrap"
version = "0.1.0"
edition = "2021"
default-run = "std"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs-err = "2.9.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"


