[package]
name = "ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
divan = "0.1.7"
humantime = "2.1.0"
portpicker = "0.1.1"
raw_sync = "0.1.5"
shared_memory = "0.12.4"

[dev-dependencies]
divan = "0.1.7"

[[bench]]
name = "examples"
harness = false
